# my_tet_arap

./: CMakeLists.txt  arap.cpp  arap.h  arap_tet.cpp  arap_tet.h  cino_io.cpp  cino_io.h  main.cpp  mesh_convert.cpp  mesh_convert.h  vtk.h  vtk_reader.cpp  vtk_reader.h
